# stimloss

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  literature.yaml
data/: LiteratureOverview.xlsx
examples/basic_analysis/: README.md  demo_config.yaml
examples/sweep_analysis/: README.md  demo_vheadroom_compare.py  demo_yield_sweep.py  parameter_sweep.yaml  yield_sweep.yaml
scripts/: replot.py
src/stimloss/: __init__.py  analyses.py  cli.py  config.py  generator.py  io_utils.py  mapping.py  plotting.py  registry.py  strategies.py  validate.py
src/stimloss.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stimloss/runners/: __init__.py  mapping_runner.py  strategies_eval.py  strategies_sweep.py
